# Standalone packaging for the `nominal_link` boundary layer.
#
# This is the Nominal-owned home of `nominal_link`: the host-agnostic Nominal
# integration boundary originally developed in-tree in DAQUniversal and lifted
# out here so Nominal can own and optimise it independently. The package dir
# (`nominal_link/`) sits beside this file; DAQUniversal installs this package as
# an optional dependency (`nominal_link @ git+https://github.com/norbertg-pf/Nominal-Link.git@main`).
[project]
name = "nominal_link"
version = "0.3.0"
description = "Host-agnostic Nominal integration boundary (data model, write-stream session, upload-CLI contract)."
requires-python = ">=3.11,<3.12"
# The public Nominal SDK. `nominal.core` is imported lazily (the host passes the
# client class into open_stream_session), so this is only needed at runtime by
# callers that actually stream. proxima_fusion (the `upload_tdms` CLI) is NOT a
# dependency for the base install: it is invoked as an external subprocess, never
# imported. It is offered as the optional `[upload]` extra below instead.
dependencies = [
    "nominal>=0.5",
    # For the vectorised int-ns timestamp encoding in feed.enqueue_block. Already
    # transitively present via the SDK (pandas/polars), so this adds no weight.
    "numpy>=1.24",
]

[project.optional-dependencies]
# Test/lint tooling only. The package's own import surface pulls in nothing
# beyond `nominal` (and that lazily), so the test suite imports only
# `nominal_link` and fakes the SDK where it needs to.
dev = [
    "pytest>=7",
    "ruff>=0.5",
]
# The private post-acquisition `upload_tdms` CLI (Nominal's `proxima_fusion` /
# `ext-proxima-fusion`). It is a heavy, private, git-only package invoked as an
# external subprocess (never imported), so it is OPT-IN, not a base dependency:
# a streaming-only consumer never pulls it. Installing this extra gives a host
# the one-command "everything Nominal" install:
#
#   uv pip install "nominal_link[upload] @ git+https://github.com/norbertg-pf/Nominal-Link.git@main"
#
# Because this is a direct git reference, it is resolved ONLY when the `[upload]`
# extra is explicitly requested -- the base install, the `[dev]` extra, and this
# repo's CI (which runs `uv run --no-sync`) never fetch it, so none of them need
# access to the private proxima repo.
upload = [
    "proxima_fusion @ git+https://github.com/nominal-io/ext-proxima-fusion.git@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nominal_link"]

# Allow the direct git reference in the `[upload]` extra above. Hatchling refuses
# to build metadata containing a direct URL unless this is set; it does not cause
# the URL to be fetched (that only happens when `[upload]` is explicitly installed).
[tool.hatch.metadata]
allow-direct-references = true
